--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <script src="js/lib/angular.min.js"></script>
         <script src="js/main.js"></script>
         <script src="js/controllers/fotos-controller.js"></script>
+        <script src="js/directives/minhas-diretivas.js"></script>
     </head>
     <body ng-controller="FotosController">
         <div class="container">
@@ -17,15 +18,9 @@
             </div>
 
             <div class="row">
-                <div ng-repeat="foto in fotos" class="panel panel-default col-md-2">
-                    <div class="panel-heading">
-                        <h3 class="panel-title text-center">{{foto.titulo}}</h3>
-                    </div>
-
-                    <div class="panel-body">
-                        <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}"></img>
-                    </div>
-                </div> <!-- fim panel -->
+                <meu-painel ng-repeat="foto in fotos" titulo="{{foto.titulo}}">
+                    <img class="img-responsive center-block" src="{{foto.url}}" alt="{{foto.titulo}}"></img>
+                </meu-painel>
             </div>
 
         </div> <!-- fim container -->        
